--- a/.env
+++ b/.env
@@ -34,4 +34,4 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
-PAYMENT_IP='https://merchant-sandbox.qpay.mn'
+PAYMENT_IP='https://merchant.qpay.mn'
