--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME='9k-180'
 APP_ENV=local
 APP_KEY=base64:RENVT1hPNTVIN0xhcXVjTE9xR2o2V0JQTGtITnoxcDA=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost:8000/
 
