--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ext-json": "*",
         "anlutro/l4-settings": "^0.7.3",
         "barryvdh/laravel-dompdf": "^0.8.2",
+        "barryvdh/laravel-translation-manager": "^0.5.10",
         "benwilkins/laravel-fcm-notification": "^4.0",
         "caouecs/laravel-lang": "~3.0",
         "doctrine/dbal": "^2.7",
