--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "@fullcalendar/bootstrap": "^5.6.0",
+        "@fullcalendar/core": "^5.6.0",
+        "moment": "^2.29.1",
+        "rrule": "^2.6.8"
     }
 }
