--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ PURCHASE_CODE=4a10cd1a-4fb5-466e-a900-0ec68e2ead33
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=test
+DB_DATABASE=test2
 DB_USERNAME=root
 DB_PASSWORD=
 
